Added a tree and trie exercise.